tests/semanticDiff-same-topologies-new2/diff_output_from_semanticDiff-same-topologies-old2.txt
Connectivity diff:
diff-type: changed, source: demo/cog-agents-bank-ui[DaemonSet], destination: demo/cog-agents-account-command[DaemonSet], ref1: SCTP 7070,TCP 8080-8081,UDP 9090, ref2: TCP 8081-8082,UDP 9091
