tests/semanticDiff-same-topologies-new2/new2.yaml
# UI -> Command
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-to-command
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: account-command-selector
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: bank-ui-selector
      ports:
        - port: 8082
          protocol: TCP
        - port: 8081
          protocol: TCP
        - port: 9091
          protocol: UDP
